# jsi-demo

./: CONTRIBUTING.md  LICENSE  README.md  package.json  rn-jsi-dlog.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/rnjsidlog/: RnJsiDlogModule.java  RnJsiDlogPackage.java
cpp/: rn-jsi-dlog.cpp  rn-jsi-dlog.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/rnjsidlog/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/rnjsidlog/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/RnJsiDlogExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/RnJsiDlogExample.xcodeproj/: project.pbxproj
example/ios/RnJsiDlogExample.xcodeproj/xcshareddata/xcschemes/: RnJsiDlogExample.xcscheme
example/ios/RnJsiDlogExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: RnJsiDlog.h  RnJsiDlog.mm
ios/RnJsiDlog.xcodeproj/: project.pbxproj
src/: index.tsx
